<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_view_shuffle"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <TextView style="@style/menu_text"
            android:id="@+id/navigate_now_playing"
            android:text="@string/navigation_now_playing"
            android:paddingLeft="8dp"
            />
        <TextView style="@style/menu_text"
            android:id="@+id/navigate_shuffle"
            android:text="@string/navigation_shuffle"
            />
        <TextView style="@style/menu_text"
            android:id="@+id/navigate_library"
            android:text="@string/navigation_library"
            android:paddingRight="8dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"

            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/shuffle_explanation"
        android:padding="8dp"
        />

</LinearLayout>